Fixed Issue with Command log messages not being truncated to 50 lines

--- a/packages/reporter/src/commands/commands.scss
+++ b/packages/reporter/src/commands/commands.scss
@@ -380,6 +380,9 @@
     width: 100%;
     -webkit-line-clamp: 50;
     -webkit-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 50;
+    -webkit-box-orient: vertical;
   }
 
   // Styles for Uncaught Exception
